# KhaApp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: CMakeLists.txt  khaapp.notifyrc  org.khaapp.KhaApp.appdata.xml  org.khaapp.KhaApp.desktop  resources.qrc
app/qml/: ChatListPage.qml  ChatPage.qml  LinkPreviewCard.qml  LockPage.qml  LoginPage.qml  Main.qml  SearchPage.qml  SettingsPage.qml
app/qml/components/: ErrorBanner.qml
app/src/: applock.cpp  applock.h  dbusbridge.cpp  dbusbridge.h  kdeconnectbridge.cpp  kdeconnectbridge.h  main.cpp  trayicon.cpp  trayicon.h
app/translations/: khaapp_en.ts  khaapp_it.ts
daemon/: go.mod  go.sum
daemon/cmd/: main.go
daemon/dbus/: service.go
daemon/protocol/: client.go  linkpreview.go
daemon/storage/: messages.go  store.go
dbus/: org.khaapp.IMessenger.xml
docs/: live-test-guide.md  live-test-report-0.1.0-beta.1.md
packaging/: khaapp-bundle-launcher.sh
packaging/aur/: PKGBUILD  khaapp-native-launcher.sh
packaging/flatpak/: khaapp-launcher.sh  org.khaapp.KhaApp.yml
